Fix maven compiler warnings
Add opens as required by Agrona